--- a/packages/docs/services/inversify-site/versioned_docs/version-7.x/api/container.mdx
+++ b/packages/docs/services/inversify-site/versioned_docs/version-7.x/api/container.mdx
@@ -11,6 +11,9 @@ import containerApiIsCurrentBoundSource from '@inversifyjs/code-examples/generat
 import containerApiOnActivationSource from '@inversifyjs/code-examples/generated/examples/v7/containerApiOnActivation.ts.txt';
 import containerApiOnDeactivationSource from '@inversifyjs/code-examples/generated/examples/v7/containerApiOnDeactivation.ts.txt';
 import containerApiUnbindBindingIdSource from '@inversifyjs/code-examples/generated/examples/v7/containerApiUnbindBindingId.ts.txt';
+import containerApiUnbindSyncSource from '@inversifyjs/code-examples/generated/examples/v7/containerApiUnbindSync.ts.txt';
+import containerApiRebindSource from '@inversifyjs/code-examples/generated/examples/v7/containerApiRebind.ts.txt';
+import containerApiRebindSyncSource from '@inversifyjs/code-examples/generated/examples/v7/containerApiRebindSync.ts.txt';
 import CodeBlock from '@theme/CodeBlock';
 
 # Container
@@ -149,6 +152,26 @@ Adds a deactivation handler for a service identifier.
 
 <CodeBlock language="ts">{containerApiOnDeactivationSource}</CodeBlock>
 
+## rebind
+
+```ts
+async rebind<T>(serviceIdentifier: ServiceIdentifier<T>): Promise<BindToFluentSyntax<T>>;
+```
+
+Convenience method that unbinds a service identifier and then creates a new binding for it. This is equivalent to calling `await container.unbind(serviceId)` followed by `container.bind(serviceId)`, but in a single method. Returns a binding builder to continue configuring the new binding.
+
+<CodeBlock language="ts">{containerApiRebindSource}</CodeBlock>
+
+## rebindSync
+
+```ts
+rebindSync<T>(serviceIdentifier: ServiceIdentifier<T>): BindToFluentSyntax<T>;
+```
+
+Synchronous version of `rebind`. Unbinds a service identifier synchronously and then creates a new binding for it. Will throw an error if the unbind operation would be asynchronous. Returns a binding builder to continue configuring the new binding.
+
+<CodeBlock language="ts">{containerApiRebindSyncSource}</CodeBlock>
+
 ## restore
 
 ```ts
@@ -188,6 +211,17 @@ unbindAll(): Promise<void>;
 ```
 
 Remove all bindings binded in this container.  This will result in the [deactivation process](../fundamentals/lifecycle/deactivation.mdx).
+
+## unbindSync
+
+```ts
+unbindSync(identifier: BindingIdentifier | ServiceIdentifier): void;
+```
+
+Removes bindings from the container synchronously. This method works like `unbind` but does not return a Promise. If the unbinding operation would be asynchronous (e.g., due to deactivation handlers), it will throw an error. Use this method when you know the operation won't involve async deactivations.
+
+<CodeBlock language="ts">{containerApiUnbindSyncSource}</CodeBlock>
+
 
 ## unload
 
